zapata-agentforce/force-app/main/default/objects/Exclusion_Garantia__c/Exclusion_Garantia__c.object-meta.xml
<CustomObject>
    <description>Partes que nunca cubre la garantia basica, sin importar meses ni kilometraje. Se consulta ANTES de evaluar limites: si la pieza esta aqui, el veredicto es NO_CUBIERTO aunque la unidad sea nueva.</description>
    <label>Exclusion de garantia</label>
    <pluralLabel>Exclusiones de garantia</pluralLabel>
    <nameField>
        <label>Parte excluida</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>