zapata-agentforce/force-app/main/default/objects/Exclusion_Garantia__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <description>Permite retirar una exclusion sin borrar el historico.</description>
    <label>Activa</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>