zapata-agentforce/force-app/main/default/objects/Exclusion_Garantia__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <description>Por que no se cubre. El agente lo explica en vez de solo negar.</description>
    <label>Motivo de exclusion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Desgaste normal</fullName>
                    <default>true</default>
                    <label>Desgaste normal</label>
                </value>
                <value>
                    <fullName>Consumible de mantenimiento</fullName>
                </value>
                <value>
                    <fullName>Dano por uso indebido</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>