zapata-agentforce/force-app/main/default/objects/Exclusion_Garantia__c/fields/Sinonimos__c.field-meta.xml
<CustomField>
    <fullName>Sinonimos__c</fullName>
    <description>Como le dice la gente a esta pieza. El operador dira "pastillas" o "zapatas", no "balatas". Sin sinonimos el agente no la reconoce.</description>
    <label>Sinonimos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>