zapata-agentforce/force-app/main/default/objects/Exclusion_Garantia__c/fields/Sistema__c.field-meta.xml
<CustomField>
    <fullName>Sistema__c</fullName>
    <description>Sistema al que pertenece la pieza.</description>
    <label>Sistema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Tren motriz</fullName>
                </value>
                <value>
                    <fullName>Electrico y electronica</fullName>
                </value>
                <value>
                    <fullName>Cabina</fullName>
                </value>
                <value>
                    <fullName>Chasis y estructura</fullName>
                </value>
                <value>
                    <fullName>Frenos</fullName>
                </value>
                <value>
                    <fullName>Refrigeracion</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>