zapata-agentforce/force-app/main/default/objects/Exclusion_Garantia__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Sistema__c</columns>
    <columns>Motivo__c</columns>
    <columns>Activa__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>